--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ h1 {
     position: relative;
     z-index: 1;
     font-size: 0.6875rem;
-    font-weight: 800;
+    font-weight: 700;
     letter-spacing: 0.025rem;
     color: #fff;
     text-transform: uppercase;
@@ -203,7 +203,7 @@ h1 {
 
 .box-title {
     font-size: 0.9375rem;
-    font-weight: 700;
+    font-weight: 600;
 }
 .box-subtitle {
     font-size: 0.8125rem;
@@ -212,7 +212,7 @@ h1 {
 }
 .box-price {
     font-size: 0.9375rem;
-    font-weight: 700;
+    font-weight: 400;
 }
 .box-price-sub {
     font-size: 0.75rem;
@@ -269,6 +269,11 @@ h1 {
     backdrop-filter: blur(10.873126983642578px);
     background: rgba(255, 255, 255, 0.3);
 }
+
+.box-subtitle, .box-right {
+    opacity: 0.7;
+}
+
 
 .chosen-best{
     --color-best-gradient: none;
