--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ h1 {
     border-radius: inherit;
     padding: 1px;
     background: var(--color-best-border);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask: linear-gradient(#fff, #fff) content-box, linear-gradient(#fff, #fff);
     -webkit-mask-composite: xor;
     mask-composite: exclude;
     pointer-events: none;
@@ -315,11 +315,11 @@ h1 {
 
 @media only screen and (max-height: 667px) {
     main{
-        margin-top: clamp(3rem, 7vh, 11.125rem)
+        margin-top: clamp(3rem,11vh, 11.125rem)
     }
 }
 
-@supports (padding-top: constant(safe-area-inset-top)) {
+@supports (padding-top: env(safe-area-inset-top)) {
     footer {
         padding-bottom: env(safe-area-inset-bottom);
     }
