--- a/style.css
+++ b/style.css
@@ -26,11 +26,55 @@
 }
 
 html {
-    font-family: -apple-system,"SF Pro", BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     color: var(--color-text);
     height: 100%;
     font-size: 16px;
     background: url("assets/img/bg.jpg") no-repeat top fixed;
+}
+
+html, body {
+    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Semibold.otf") format("opentype");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Bold.otf") format("opentype");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "SF Pro Text";
+    src: url("./assets/fonts/SF-Pro-Text-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: "SF Pro Text";
+    src: url("./assets/fonts/SF-Pro-Text-Medium.otf") format("opentype");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Heavy.otf") format("opentype"); /* или Black */
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
 }
 
 body {
@@ -97,6 +141,11 @@ h1 {
     text-shadow: var(--shadow-text);
 }
 
+.card-item .text-box {
+    font-family: "SF Pro Display", "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    font-weight: 600;
+}
+
 .img-box-container {
     display: flex;
     align-items: center;
@@ -132,7 +181,6 @@ h1 {
     left: 0.5rem;
     width: 6.125rem;
     font-size: 0.75rem;
-    font-weight: 400;
     z-index: 2;
 }
 
