--- a/style.css
+++ b/style.css
@@ -40,41 +40,38 @@ html, body {
 }
 
 @font-face {
-    font-family: 'SFProDisplay';
-    src: url('assets/fonts/SFProDisplay-Bold.woff2') format('woff2');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SFProDisplay';
-    src: url('assets/fonts/SFProDisplay-Heavy.woff2') format('woff2');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SFProDisplay';
-    src: url('assets/fonts/SFProDisplay-Semibold.woff2') format('woff2');
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Semibold.otf") format("opentype");
     font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Bold.otf") format("opentype");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
 
 @font-face {
-    font-family: 'SFProText';
-    src: url('assets/fonts/SFProText-Medium.woff2') format('woff2');
+    font-family: "SF Pro Text";
+    src: url("./assets/fonts/SF-Pro-Text-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: "SF Pro Text";
+    src: url("./assets/fonts/SF-Pro-Text-Medium.otf") format("opentype");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'SFProText';
-    src: url('assets/fonts/SFProText-Regular.woff2') format('woff2');
-    font-weight: normal;
+    font-family: "SF Pro Display";
+    src: url("./assets/fonts/SF-Pro-Display-Heavy.otf") format("opentype");
     font-style: normal;
     font-display: swap;
 }
