--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "SF Pro", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     color: var(--color-text);
     height: 100%;
     font-size: 16px;
@@ -41,14 +41,6 @@ html, body {
 
 @font-face {
     font-family: "SF Pro Text";
-    src: url("./assets/fonts/SF-Pro-Text-Light.woff2") format("woff2");
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "SF Pro Text";
     src: url("./assets/fonts/SF-Pro-Text-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
@@ -59,14 +51,6 @@ html, body {
     font-family: "SF Pro Text";
     src: url("./assets/fonts/SF-Pro-Text-Medium.woff2") format("woff2");
     font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "SF Pro Display";
-    src: url("./assets/fonts/SF-Pro-Display-Regular.woff2") format("woff2");
-    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
@@ -330,7 +314,7 @@ h1 {
 }
 
 .toolbar > li {
-    font-weight: 200;
+    font-weight: 300;
     text-decoration: underline;
     list-style: none;
     text-align: center;
