--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ html {
     color: var(--color-text);
     height: 100%;
     font-size: 16px;
-    background: url("assets/img/bg.webp") no-repeat top fixed;
 }
 
 html, body {
@@ -92,11 +91,6 @@ body {
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
-}
-
-.status-bar {
-    width: 100%;
-    height: 3rem;
 }
 
 .close-icon {
@@ -350,21 +344,6 @@ h1 {
         background-image: url('assets/img/bg@2.jpg');
     }
 
-
-    .card-item:nth-child(1) {
-        background-image: url('assets/img/bgUnlim@2x.jpg');
-        background-size: cover;
-    }
-
-    .card-item:nth-child(2) {
-        background-image: url('assets/img/Bitmap@2x.png');
-        background-size: cover;
-    }
-
-    .card-item:nth-child(3) {
-        background-image: url( 'assets/img/Group 33@2x.png');
-        background-size: cover;
-    }
 }
 
 @media only screen and (max-height: 667px) {
@@ -374,7 +353,5 @@ h1 {
 }
 
 @supports (padding-top: env(safe-area-inset-top)) {
-    footer {
-        padding-bottom: env(safe-area-inset-bottom);
-    }
+    .container { padding-top: env(safe-area-inset-top); }
 }
