--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ html, body {
 body {
     min-height: 100vh;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-repeat: no-repeat;
     background-position: top;
 }
@@ -108,8 +108,8 @@ body {
 
 main {
     flex: 1 0 auto;
-    margin-bottom: 2rem;
-    margin-top: clamp(5rem, 22vh, 11.125rem);
+    margin-bottom: 1rem;
+    margin-top: clamp(7rem, 32vh, 16rem);
 }
 
 footer {
@@ -131,11 +131,13 @@ footer {
 }
 
 h1 {
-    font-weight: 900;
+    font-family: "SF Pro Display", Helvetica, "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+    font-weight: 900!important;
     font-size: 2.625rem;
     line-height: 1.1;
     text-align: center;
     text-shadow: var(--shadow-text);
+    font-synthesis: none;
 }
 
 .card-item .text-box {
@@ -160,7 +162,7 @@ h1 {
     content: "";
     position: absolute;
     inset: 0;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(4, 6, 26, 0) 62.04%, rgba(6, 9, 37, 0.56) 76.68%, #15072f 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(4, 6, 26, 0.35) 62.04%, rgba(6, 9, 37, 0.56) 76.68%, #15072f 100%);
     box-shadow: 0 0 22px 0 rgba(255, 130, 228, 0.24);
 }
 
@@ -348,7 +350,7 @@ h1 {
 
 @media only screen and (max-height: 667px) {
     main{
-        margin-top: clamp(3rem,11vh, 11.125rem)
+        margin-top: clamp(3rem,14vh, 11.125rem)
     }
 }
 
