--- a/style.css
+++ b/style.css
@@ -131,8 +131,7 @@ footer {
 }
 
 h1 {
-    font-family: "SF Pro Display", Helvetica, "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    font-weight: 900!important;
+    font-weight: 900;
     font-size: 2.625rem;
     line-height: 1.1;
     text-align: center;
