--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     color: var(--color-text);
     height: 100%;
     font-size: 16px;
@@ -130,7 +129,8 @@ footer {
     margin-bottom: 1.5rem;
 }
 
-h1 {
+main h1 {
+    font-family: "SF Pro Display", "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif !important;
     font-weight: 900;
     font-size: 2.625rem;
     line-height: 1.1;
